# czech-covid19-data-visualization

./: .gitignore  Pipfile  README.md  app_runner.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
czech_covid19_data_visualization/: app.py  data.py  graphs.py  io.py
