[tool.poetry]
name = "czech-covid19-data-visualization"
version = "0.1.0"
description = ""
authors = ["radekBednarik <radek.bednarik@tesena.com>"]

[tool.poetry.dependencies]
python = "^3.8"
czech-covid19-data-api = "^1.0.5"
dash = "^1.18.1"
dash-bootstrap-components = "^0.11.1"
pandas = "^1.2.0"
screeninfo = "^0.6.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.7.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
